# Relay_BaseClass

./: Relay设计.docx
trunk/: Makefile.in  config.h.in  configure  configure.ac
trunk/autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
trunk/include/common/comm/: BaseHeader.h  BufferManager.h  TCPListenAgent.h
trunk/scripts/: result.txt
trunk/src/: Makefile.am  Makefile.in
trunk/src/CToSMapManager/: CToSMapManager.cpp  CToSMapManager.h  Makefile.am  Makefile.in
trunk/src/Protocol/: Protocol.h
trunk/src/RelayClient/: Makefile.am  Makefile.in  ServerAgent.cpp  \  main.cpp
trunk/src/RelayServer/: .ClientAgent.cpp.swp  ClientAgent.cpp  ClientAgent.h  Makefile.am  Makefile.in  main.cpp
trunk/src/RelayServer/Task/: LogInTask.cpp  LogInTask.h  LogInWorkItem.cpp  LogInWorkItem.h  LogOffTask.cpp  LogOffTask.h  LogOffWorkItem.cpp  LogOffWorkItem.h  Makefile.am  Makefile.in  RelayBaseTask.h
trunk/src/common/: Makefile.am  Makefile.in
trunk/src/common/Timer/: Makefile.in
trunk/src/common/comm/: AgentManager.cpp  Makefile.in
trunk/src/common/daemon/: Makefile.in
trunk/src/common/log/: ConsoleAppender.cpp  Makefile.in  SyslogAppender.cpp
trunk/src/common/odbc/: Makefile.in
trunk/src/common/sys/: Makefile.in  ThreadPool.cpp
trunk/src/common/util/: Makefile.in
trunk/src/common/xml/: Makefile.am  Makefile.in
trunk/test/: Makefile.in
